# ssc_assignment_1

./: .coveragerc  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  artifact.md  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: cd.yml  ci.yml  scorecard.yml
cicd/citool/: CNAME  Dockerfile  pyproject.toml
data/: artifact.bundle
docs/: assignment1_readme.txt  assignment2_readme.txt  assignment3_readme.txt  assignment4_readme.txt  assignment5_readme.txt
logs/: bandit.final.txt  bandit.initial.txt  black.inital.txt  flake8.inital.txt  mypy.initial.txt  pylint.final.txt  pylint.inital.txt  ruff.initial.txt
rekor/src/: main.py  merkle_proof.py  util.py
tests/: checkpoint_schema.json  checkpoint_schema_bad.json  run_test_wrappers.py  test_a1_checkpoint_fail.py  test_a1_checkpoint_pass.py  test_a1_consistency_fail.py  test_a1_consistency_pass.py  test_a1_consistency_root_hash_fail.py  test_a1_consistency_tree_id_fail.py  test_a1_consistency_tree_size_fail.py  test_a1_inclusion.py  test_a1_inclusion_fail.py  test_a1_inclusion_pass.py  test_a1_logentry.py  test_a1_logentry_fail.py  test_a1_logentry_pass.py  test_checkpoint.py  test_consistency.py  test_inclusion.py
trufflehog/docs/: trufflehog_help.txt
