[project]
name = "ssc-assignment-1"
version = "2.0.0"
description = ""
authors = [
    {name = "Warren Pfeffer",email = "wp732@nyu.edu"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "jsonschema (>=4.25.1,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79		# strict PEP-8 wrapping at column 79
target-version = ['py311']

[tool.pylint.'MESSAGES CONTROL']
disable = [
	"too-many-arguments",
	"too-many-positional-arguments",
	"too-many-locals",
	"broad-exception-caught"
]

[tool.deptry]
root = ["src", "tests"]
exclude = ["venv", ".venv", ".direnv", ".git", "setup.py"]

[dependency-groups]
dev = [
    "pylint (>=4.0.2,<5.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.14.4,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "bandit (>=1.8.6,<2.0.0)",
    "doq (>=0.10.0,<0.11.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "deptry (>=0.24.0,<0.25.0)",
    "genson (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
