[tool.poetry]
name = "ssc-project"
version = "0.0.0"
description = "Development tools for this repo"
package-mode = false

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.group.dev.dependencies]
pylint = ">=4.0.2,<5.0.0"
black = ">=25.9.0,<26.0.0"
ruff = ">=0.14.4,<0.15.0"
mypy = ">=1.18.2,<2.0.0"
bandit = ">=1.8.6,<2.0.0"
doq = ">=0.10.0,<0.11.0"
pytest = ">=9.0.0,<10.0.0"
deptry = ">=0.24.0,<0.25.0"
genson = ">=1.3.0,<2.0.0"
pytest-cov = ">=7.0.0,<8.0.0"
pytest-env = ">=1.2.0,<2.0.0"
wp732-rekor-tools = {path = "packages/wp732-rekor-tools"}
cyclonedx-bom = "^7.2.1"

[tool.black]
line-length = 79		# strict PEP-8 wrapping at column 79
target-version = ['py311']

[tool.pylint.'MESSAGES CONTROL']
disable = [
	"too-many-arguments",
	"too-many-positional-arguments",
	"too-many-locals",
	"broad-exception-caught"
]

[tool.deptry]
root = ["packages/*/src", "tests"]
exclude = ["venv", ".venv", ".direnv", ".git", "setup.py"]

[tool.pytest.ini_options]
env = ["PYTHONPATH=packages/wp732-rekor-tools/src:tests"]
